Fixed rotabar covering bottom shift on mobile

--- a/frontend/src/scss/modules/_shifts.scss
+++ b/frontend/src/scss/modules/_shifts.scss
@@ -434,7 +434,7 @@
 
 @media only screen and (max-width: 1000px) {
   .shiftList {
-    margin-bottom: 120px;
+    padding-bottom: 120px;
     &.fixed {
       margin-top: 8px;
     }
